Standardize product card font sizes and update footer/products

--- a/jalabiyas-products.html
+++ b/jalabiyas-products.html
@@ -76,12 +76,12 @@
                         </div>
                      </div>
                      <div class="tp-product-content-2 pt-15">
-                        <div class="tp-product-tag">
-                           <a href="#">اناقة هادئة</a>
-                        </div>
                         <h3 class="tp-product-title">
                            <a href="product.html?id=jalabiya-silk-1">مخور حرير فاخر 1</a>
                         </h3>
+                        <div class="tp-product-tag">
+                           اناقة هادئة
+                        </div>
                         <div class="tp-product-price-wrapper">
                            <span class="tp-product-price-2 new-price">380 <span>ر.ق</span></span>
                         </div>
@@ -106,12 +106,12 @@
                         </div>
                      </div>
                      <div class="tp-product-content-2 pt-15">
-                        <div class="tp-product-tag">
-                           <a href="#">اناقة هادئة</a>
-                        </div>
                         <h3 class="tp-product-title">
                            <a href="product.html?id=jalabiya-silk-1">مخور حرير فاخر 2</a>
                         </h3>
+                        <div class="tp-product-tag">
+                           اناقة هادئة
+                        </div>
                         <div class="tp-product-price-wrapper">
                            <span class="tp-product-price-2 new-price">380 <span>ر.ق</span></span>
                         </div>
@@ -136,12 +136,12 @@
                         </div>
                      </div>
                      <div class="tp-product-content-2 pt-15">
-                        <div class="tp-product-tag">
-                           <a href="#">اناقة هادئة</a>
-                        </div>
                         <h3 class="tp-product-title">
                            <a href="product.html?id=jalabiya-silk-1">مخور حرير فاخر 3</a>
                         </h3>
+                        <div class="tp-product-tag">
+                           اناقة هادئة
+                        </div>
                         <div class="tp-product-price-wrapper">
                            <span class="tp-product-price-2 new-price">380 <span>ر.ق</span></span>
                         </div>
@@ -166,12 +166,12 @@
                         </div>
                      </div>
                      <div class="tp-product-content-2 pt-15">
-                        <div class="tp-product-tag">
-                           <a href="#">اناقة هادئة</a>
-                        </div>
                         <h3 class="tp-product-title">
                            <a href="product.html?id=jalabiya-silk-1">مخور حرير فاخر 4</a>
                         </h3>
+                        <div class="tp-product-tag">
+                           اناقة هادئة
+                        </div>
                         <div class="tp-product-price-wrapper">
                            <span class="tp-product-price-2 new-price">380 <span>ر.ق</span></span>
                         </div>
@@ -198,12 +198,12 @@
                         </div>
                      </div>
                      <div class="tp-product-content-2 pt-15">
-                        <div class="tp-product-tag">
-                           <a href="#">قصات حديثة</a>
-                        </div>
                         <h3 class="tp-product-title">
                            <a href="product.html?id=jalabiya-modern-1">مخور قطن مريح 1</a>
                         </h3>
+                        <div class="tp-product-tag">
+                           قصات حديثة
+                        </div>
                         <div class="tp-product-price-wrapper">
                            <span class="tp-product-price-2 new-price">250 <span>ر.ق</span></span>
                         </div>
@@ -228,12 +228,12 @@
                         </div>
                      </div>
                      <div class="tp-product-content-2 pt-15">
-                        <div class="tp-product-tag">
-                           <a href="#">قصات حديثة</a>
-                        </div>
                         <h3 class="tp-product-title">
                            <a href="product.html?id=jalabiya-modern-1">مخور قطن مريح 2</a>
                         </h3>
+                        <div class="tp-product-tag">
+                           قصات حديثة
+                        </div>
                         <div class="tp-product-price-wrapper">
                            <span class="tp-product-price-2 new-price">250 <span>ر.ق</span></span>
                         </div>
@@ -258,12 +258,12 @@
                         </div>
                      </div>
                      <div class="tp-product-content-2 pt-15">
-                        <div class="tp-product-tag">
-                           <a href="#">قصات حديثة</a>
-                        </div>
                         <h3 class="tp-product-title">
                            <a href="product.html?id=jalabiya-modern-1">مخور قطن مريح 3</a>
                         </h3>
+                        <div class="tp-product-tag">
+                           قصات حديثة
+                        </div>
                         <div class="tp-product-price-wrapper">
                            <span class="tp-product-price-2 new-price">250 <span>ر.ق</span></span>
                         </div>
@@ -288,12 +288,12 @@
                         </div>
                      </div>
                      <div class="tp-product-content-2 pt-15">
-                        <div class="tp-product-tag">
-                           <a href="#">قصات حديثة</a>
-                        </div>
                         <h3 class="tp-product-title">
                            <a href="product.html?id=jalabiya-modern-1">مخور قطن مريح 4</a>
                         </h3>
+                        <div class="tp-product-tag">
+                           قصات حديثة
+                        </div>
                         <div class="tp-product-price-wrapper">
                            <span class="tp-product-price-2 new-price">250 <span>ر.ق</span></span>
                         </div>
