--- a/makhawir-products.html
+++ b/makhawir-products.html
@@ -76,12 +76,12 @@
                                 </div>
                             </div>
                             <div class="tp-product-content-2 pt-15">
-                                <div class="tp-product-tag-2">
-                                    <a href="#">حرير</a>
-                                </div>
                                 <h3 class="tp-product-title-2">
                                     <a href="product.html?id=makhour-silk-1">مخور حرير فاخر 1</a>
                                 </h3>
+                                <div class="tp-product-tag-2">
+                                    حرير
+                                </div>
                                 <div class="tp-product-price-wrapper-2">
                                     <span class="tp-product-price-2 new-price">380 <span>ر.ق</span></span>
                                 </div>
@@ -107,12 +107,12 @@
                                 </div>
                             </div>
                             <div class="tp-product-content-2 pt-15">
-                                <div class="tp-product-tag-2">
-                                    <a href="#">حرير</a>
-                                </div>
                                 <h3 class="tp-product-title-2">
                                     <a href="product.html?id=makhour-silk-2">مخور حرير فاخر 2</a>
                                 </h3>
+                                <div class="tp-product-tag-2">
+                                    حرير
+                                </div>
                                 <div class="tp-product-price-wrapper-2">
                                     <span class="tp-product-price-2 new-price">380 <span>ر.ق</span></span>
                                 </div>
@@ -137,12 +137,12 @@
                                 </div>
                             </div>
                             <div class="tp-product-content-2 pt-15">
-                                <div class="tp-product-tag-2">
-                                    <a href="#">حرير</a>
-                                </div>
                                 <h3 class="tp-product-title-2">
                                     <a href="product.html?id=makhour-silk-3">مخور حرير فاخر 3</a>
                                 </h3>
+                                <div class="tp-product-tag-2">
+                                    حرير
+                                </div>
                                 <div class="tp-product-price-wrapper-2">
                                     <span class="tp-product-price-2 new-price">380 <span>ر.ق</span></span>
                                 </div>
@@ -167,12 +167,12 @@
                                 </div>
                             </div>
                             <div class="tp-product-content-2 pt-15">
-                                <div class="tp-product-tag-2">
-                                    <a href="#">حرير</a>
-                                </div>
                                 <h3 class="tp-product-title-2">
                                     <a href="product.html?id=makhour-silk-4">مخور حرير فاخر 4</a>
                                 </h3>
+                                <div class="tp-product-tag-2">
+                                    حرير
+                                </div>
                                 <div class="tp-product-price-wrapper-2">
                                     <span class="tp-product-price-2 new-price">380 <span>ر.ق</span></span>
                                 </div>
@@ -198,12 +198,12 @@
                                 </div>
                             </div>
                             <div class="tp-product-content-2 pt-15">
-                                <div class="tp-product-tag-2">
-                                    <a href="#">قطن</a>
-                                </div>
                                 <h3 class="tp-product-title-2">
                                     <a href="product.html?id=makhour-cotton-1">مخور قطن مريح 1</a>
                                 </h3>
+                                <div class="tp-product-tag-2">
+                                    قطن
+                                </div>
                                 <div class="tp-product-price-wrapper-2">
                                     <span class="tp-product-price-2 new-price">250 <span>ر.ق</span></span>
                                 </div>
@@ -229,12 +229,12 @@
                                 </div>
                             </div>
                             <div class="tp-product-content-2 pt-15">
-                                <div class="tp-product-tag-2">
-                                    <a href="#">قطن</a>
-                                </div>
                                 <h3 class="tp-product-title-2">
                                     <a href="product.html?id=makhour-cotton-2">مخور قطن مريح 2</a>
                                 </h3>
+                                <div class="tp-product-tag-2">
+                                    قطن
+                                </div>
                                 <div class="tp-product-price-wrapper-2">
                                     <span class="tp-product-price-2 new-price">250 <span>ر.ق</span></span>
                                 </div>
@@ -260,12 +260,12 @@
                                 </div>
                             </div>
                             <div class="tp-product-content-2 pt-15">
-                                <div class="tp-product-tag-2">
-                                    <a href="#">قطن</a>
-                                </div>
                                 <h3 class="tp-product-title-2">
                                     <a href="product.html?id=makhour-cotton-3">مخور قطن مريح 3</a>
                                 </h3>
+                                <div class="tp-product-tag-2">
+                                    قطن
+                                </div>
                                 <div class="tp-product-price-wrapper-2">
                                     <span class="tp-product-price-2 new-price">250 <span>ر.ق</span></span>
                                 </div>
@@ -291,12 +291,12 @@
                                 </div>
                             </div>
                             <div class="tp-product-content-2 pt-15">
-                                <div class="tp-product-tag-2">
-                                    <a href="#">قطن</a>
-                                </div>
                                 <h3 class="tp-product-title-2">
                                     <a href="product.html?id=makhour-cotton-4">مخور قطن مريح 4</a>
                                 </h3>
+                                <div class="tp-product-tag-2">
+                                    قطن
+                                </div>
                                 <div class="tp-product-price-wrapper-2">
                                     <span class="tp-product-price-2 new-price">250 <span>ر.ق</span></span>
                                 </div>
@@ -321,12 +321,12 @@
                                 </div>
                             </div>
                             <div class="tp-product-content-2 pt-15">
-                                <div class="tp-product-tag-2">
-                                    <a href="#">بناتي</a>
-                                </div>
                                 <h3 class="tp-product-title-2">
                                     <a href="product.html?id=makhour-girls-1">مخور بناتي صغير 1</a>
                                 </h3>
+                                <div class="tp-product-tag-2">
+                                    بناتي
+                                </div>
                                 <div class="tp-product-price-wrapper-2">
                                     <span class="tp-product-price-2 new-price">180 <span>ر.ق</span></span>
                                 </div>
@@ -351,12 +351,12 @@
                                 </div>
                             </div>
                             <div class="tp-product-content-2 pt-15">
-                                <div class="tp-product-tag-2">
-                                    <a href="#">بناتي</a>
-                                </div>
                                 <h3 class="tp-product-title-2">
                                     <a href="product.html?id=makhour-girls-2">مخور بناتي صغير 2</a>
                                 </h3>
+                                <div class="tp-product-tag-2">
+                                    بناتي
+                                </div>
                                 <div class="tp-product-price-wrapper-2">
                                     <span class="tp-product-price-2 new-price">180 <span>ر.ق</span></span>
                                 </div>
@@ -381,12 +381,12 @@
                                 </div>
                             </div>
                             <div class="tp-product-content-2 pt-15">
-                                <div class="tp-product-tag-2">
-                                    <a href="#">بناتي</a>
-                                </div>
                                 <h3 class="tp-product-title-2">
                                     <a href="product.html?id=makhour-girls-3">مخور بناتي صغير 3</a>
                                 </h3>
+                                <div class="tp-product-tag-2">
+                                    بناتي
+                                </div>
                                 <div class="tp-product-price-wrapper-2">
                                     <span class="tp-product-price-2 new-price">180 <span>ر.ق</span></span>
                                 </div>
@@ -411,12 +411,12 @@
                                 </div>
                             </div>
                             <div class="tp-product-content-2 pt-15">
-                                <div class="tp-product-tag-2">
-                                    <a href="#">بناتي</a>
-                                </div>
                                 <h3 class="tp-product-title-2">
                                     <a href="product.html?id=makhour-girls-4">مخور بناتي صغير 4</a>
                                 </h3>
+                                <div class="tp-product-tag-2">
+                                    بناتي
+                                </div>
                                 <div class="tp-product-price-wrapper-2">
                                     <span class="tp-product-price-2 new-price">180 <span>ر.ق</span></span>
                                 </div>
@@ -442,12 +442,12 @@
                                 </div>
                             </div>
                             <div class="tp-product-content-2 pt-15">
-                                <div class="tp-product-tag-2">
-                                    <a href="#">شيلة</a>
-                                </div>
                                 <h3 class="tp-product-title-2">
                                     <a href="product.html?id=makhour-sheila-1">طقم مخور وشيلة 1</a>
                                 </h3>
+                                <div class="tp-product-tag-2">
+                                    شيلة
+                                </div>
                                 <div class="tp-product-price-wrapper-2">
                                     <span class="tp-product-price-2 new-price">450 <span>ر.ق</span></span>
                                 </div>
@@ -473,12 +473,12 @@
                                 </div>
                             </div>
                             <div class="tp-product-content-2 pt-15">
-                                <div class="tp-product-tag-2">
-                                    <a href="#">شيلة</a>
-                                </div>
                                 <h3 class="tp-product-title-2">
                                     <a href="product.html?id=makhour-sheila-2">طقم مخور وشيلة 2</a>
                                 </h3>
+                                <div class="tp-product-tag-2">
+                                    شيلة
+                                </div>
                                 <div class="tp-product-price-wrapper-2">
                                     <span class="tp-product-price-2 new-price">450 <span>ر.ق</span></span>
                                 </div>
@@ -504,12 +504,12 @@
                                 </div>
                             </div>
                             <div class="tp-product-content-2 pt-15">
-                                <div class="tp-product-tag-2">
-                                    <a href="#">شيلة</a>
-                                </div>
                                 <h3 class="tp-product-title-2">
                                     <a href="product.html?id=makhour-sheila-3">طقم مخور وشيلة 3</a>
                                 </h3>
+                                <div class="tp-product-tag-2">
+                                    شيلة
+                                </div>
                                 <div class="tp-product-price-wrapper-2">
                                     <span class="tp-product-price-2 new-price">450 <span>ر.ق</span></span>
                                 </div>
@@ -535,12 +535,12 @@
                                 </div>
                             </div>
                             <div class="tp-product-content-2 pt-15">
-                                <div class="tp-product-tag-2">
-                                    <a href="#">شيلة</a>
-                                </div>
                                 <h3 class="tp-product-title-2">
                                     <a href="product.html?id=makhour-sheila-4">طقم مخور وشيلة 4</a>
                                 </h3>
+                                <div class="tp-product-tag-2">
+                                    شيلة
+                                </div>
                                 <div class="tp-product-price-wrapper-2">
                                     <span class="tp-product-price-2 new-price">450 <span>ر.ق</span></span>
                                 </div>
