--- a/product.html
+++ b/product.html
@@ -268,12 +268,12 @@
                                  </div>
                               </div>
                               <div class="tp-product-content-2 pt-15">
-                                 <div class="tp-product-tag-2">
-                                    <a href="#">حرير</a>
-                                 </div>
                                  <h3 class="tp-product-title-2">
                                     <a href="product.html?id=1"> مخور حرير </a>
                                  </h3>
+                                 <div class="tp-product-tag-2">
+                                    حرير
+                                 </div>
                                  <div class="tp-product-price-wrapper-2">
                                     <span class="tp-product-price-2 new-price">300 <span>ر.ق</span></span>
                                  </div>
@@ -301,12 +301,12 @@
                                  </div>
                               </div>
                               <div class="tp-product-content-2 pt-15">
-                                 <div class="tp-product-tag-2">
-                                    <a href="#">قطن</a>
-                                 </div>
                                  <h3 class="tp-product-title-2">
                                     <a href="product.html?id=2">مخور قطن</a>
                                  </h3>
+                                 <div class="tp-product-tag-2">
+                                    قطن
+                                 </div>
                                  <div class="tp-product-price-wrapper-2">
                                     <span class="tp-product-price-2 new-price">250 <span>ر.ق</span></span>
                                  </div>
@@ -334,12 +334,12 @@
                                  </div>
                               </div>
                               <div class="tp-product-content-2 pt-15">
-                                 <div class="tp-product-tag-2">
-                                    <a href="#">بناتي</a>
-                                 </div>
                                  <h3 class="tp-product-title-2">
                                     <a href="product.html?id=3">مخور بناتي</a>
                                  </h3>
+                                 <div class="tp-product-tag-2">
+                                    بناتي
+                                 </div>
                                  <div class="tp-product-price-wrapper-2">
                                     <span class="tp-product-price-2 new-price">180 <span>ر.ق</span></span>
                                  </div>
@@ -367,12 +367,12 @@
                                  </div>
                               </div>
                               <div class="tp-product-content-2 pt-15">
-                                 <div class="tp-product-tag-2">
-                                    <a href="#">مناسبات</a>
-                                 </div>
                                  <h3 class="tp-product-title-2">
                                     <a href="product.html?id=4">جلابية فاخرة</a>
                                  </h3>
+                                 <div class="tp-product-tag-2">
+                                    مناسبات
+                                 </div>
                                  <div class="tp-product-price-wrapper-2">
                                     <span class="tp-product-price-2 new-price">480 <span>ر.ق</span></span>
                                  </div>
@@ -400,12 +400,12 @@
                                  </div>
                               </div>
                               <div class="tp-product-content-2 pt-15">
-                                 <div class="tp-product-tag-2">
-                                    <a href="#">رجالي</a>
-                                 </div>
                                  <h3 class="tp-product-title-2">
                                     <a href="product.html?id=5">جلابية رجالي</a>
                                  </h3>
+                                 <div class="tp-product-tag-2">
+                                    رجالي
+                                 </div>
                                  <div class="tp-product-price-wrapper-2">
                                     <span class="tp-product-price-2 new-price">180 <span>ر.ق</span></span>
                                  </div>
@@ -433,12 +433,12 @@
                                  </div>
                               </div>
                               <div class="tp-product-content-2 pt-15">
-                                 <div class="tp-product-tag-2">
-                                    <a href="#">شيلة</a>
-                                 </div>
                                  <h3 class="tp-product-title-2">
                                     <a href="product.html?id=6">طقم شيلة</a>
                                  </h3>
+                                 <div class="tp-product-tag-2">
+                                    شيلة
+                                 </div>
                                  <div class="tp-product-price-wrapper-2">
                                     <span class="tp-product-price-2 new-price">450 <span>ر.ق</span></span>
                                  </div>
