--- a/related_products.html
+++ b/related_products.html
@@ -19,12 +19,12 @@
             </div>
         </div>
         <div class="tp-product-content-2 pt-15">
-            <div class="tp-product-tag-2">
-                <a href="#">إلكترونيات</a>
-            </div>
             <h3 class="tp-product-title-2">
                 <a href="product.html?id=electronics-1">سماعات لاسلكية</a>
             </h3>
+            <div class="tp-product-tag-2">
+                إلكترونيات
+            </div>
 
             <div class="tp-product-price-wrapper-2">
                 <span class="tp-product-price-2 new-price">$120.00</span>
@@ -49,12 +49,12 @@
             </div>
         </div>
         <div class="tp-product-content-2 pt-15">
-            <div class="tp-product-tag-2">
-                <a href="#">أزياء</a>
-            </div>
             <h3 class="tp-product-title-2">
                 <a href="product.html?id=fashion-1">تيشيرت قطني</a>
             </h3>
+            <div class="tp-product-tag-2">
+                أزياء
+            </div>
 
             <div class="tp-product-price-wrapper-2">
                 <span class="tp-product-price-2 new-price">$25.00</span>
@@ -79,12 +79,12 @@
             </div>
         </div>
         <div class="tp-product-content-2 pt-15">
-            <div class="tp-product-tag-2">
-                <a href="#">أزياء</a>
-            </div>
             <h3 class="tp-product-title-2">
                 <a href="product.html?id=fashion-2">بنطال جينز أزرق كلاسيكي</a>
             </h3>
+            <div class="tp-product-tag-2">
+                أزياء
+            </div>
 
             <div class="tp-product-price-wrapper-2">
                 <span class="tp-product-price-2 new-price">$45.00</span>
@@ -109,12 +109,12 @@
             </div>
         </div>
         <div class="tp-product-content-2 pt-15">
-            <div class="tp-product-tag-2">
-                <a href="#">ديكور المنزل</a>
-            </div>
             <h3 class="tp-product-title-2">
                 <a href="product.html?id=home-1">مزهرية سيراميك</a>
             </h3>
+            <div class="tp-product-tag-2">
+                ديكور المنزل
+            </div>
 
             <div class="tp-product-price-wrapper-2">
                 <span class="tp-product-price-2 new-price">$18.00</span>
